# asdfopengl

./: CMakeLists.txt  README.md
resources/shaders/: shader.frag  shader.vert
src/: gl.h  log.c  log.h  main.c  shader.c  shader.h  types.c  types.h
src/nuklear/: nuklear.c
